# data-from-wrds

./: LICENSE  README.md  pyproject.toml
src/data_from_wrds/: __init__.py  cli.py  comp_annual.py  comp_quarterly.py  crsp_daily_siz.py  crsp_monthly.py  crsp_monthly_v2.py  factory.py  fetch_tools.py  fetch_tools2.py  individual_tables.py  linkers.py  registry_of_fetch_functions.json  tables.py  utils.py  worldscope.py
src/data_from_wrds/clean/: comp_annual.py  crsp_daily.py  crsp_monthly.py  fama_french.py  worldscope.py
src/data_from_wrds/ingest/: individual_tables.py  merged_tables.py
